--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>STARBUCKS</title>
+    <!-- <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="STARBUCKS" />
+    <meta property="og:title" content="STARBUCKS COFFEE KOREA" />
+    <meta property="og:description" content="스타벅스 클론코딩 오픈그래프" />
+    <meta property="og:image" content="images/starbucks_seo.jpg" />
+    <meta property="og:url" content="https://starbucks.co.kr" /> -->
     <link rel="icon" href="favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
+    <!-- CSS에 font-family 추가하기 -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
-  <body></body>
+  <body>
+    <!-- <div class="material-icons">search</div> -->
+  </body>
 </html>
