💄 style: 헤더 부분 css 작업 완료 및 main-menu 작업중

--- a/index.html
+++ b/index.html
@@ -27,8 +27,125 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script defer src="js/main.js"></script>
   </head>
   <body>
     <!-- <div class="material-icons">search</div> -->
+    <header>
+      <div class="inner">
+        <a href="/" class="logo">
+          <img src="images/starbucks_logo.png" alt="스타벅스" />
+        </a>
+        <div class="sub-menu">
+          <ul class="menu">
+            <li><a href="/signin">Sign In</a></li>
+            <li><a href="javascript:void(0)">My Starbucks</a></li>
+            <li><a href="javascript:void(0)">Customer Service & Ideas</a></li>
+            <li><a href="javascript:void(0)">Find a Store</a></li>
+          </ul>
+          <div class="search">
+            <input type="text" />
+            <div class="material-icons">search</div>
+          </div>
+        </div>
+        <div class="main-menu">
+          <ul class="menu">
+            <li class="item">
+              <div class="item-title">COFFEE</div>
+              <!-- 검은 배경 -->
+              <div class="item-contents">
+                <div class="contents-menu">
+                  <ul>
+                    <h4>커피</h4>
+                    <li>스타벅스 원두</li>
+                    <li>스타벅스 비아</li>
+                    <li>스타벅스 오리가미</li>
+                  </ul>
+                  <ul>
+                    <h4>에스프레소 음료</h4>
+                    <li>스타벅스 원두</li>
+                  </ul>
+                  <ul>
+                    <h4>커피이야기</h4>
+                    <li>스타벅스 로스트 스펙트럼</li>
+                  </ul>
+                  <ul>
+                    <h4>최상의 커피를 즐기는 법</h4>
+                    <li>커피 프레스</li>
+                  </ul>
+                </div>
+                <div class="contents-bottom">
+                  <div class="bottom-contents">
+                    <h4>나와 어울리는 커피 찾기</h4>
+                    <p>스타벅스가 여러분에게 어울리는 커피를 찾아드립니다.</p>
+                  </div>
+                  <div class="bottom-contents">
+                    <h4>나와 어울리는 커피 찾기</h4>
+                    <p>스타벅스가 여러분에게 어울리는 커피를 찾아드립니다.</p>
+                  </div>
+                </div>
+                <!-- <ul class="contents-menu">
+                  <h4>에스프레소 음료</h4>
+                  <li>도피오</li>
+                  <li>에스프레소 마키아또</li>
+                  <li>아메리카노</li>
+                </ul> -->
+              </div>
+            </li>
+            <li class="item">
+              <div class="item-title">MENU</div>
+            </li>
+            <li class="item">
+              <div class="item-title">STORE</div>
+            </li>
+            <li class="item">
+              <div class="item-title">RESPONSIBILITY</div>
+            </li>
+            <li class="item">
+              <div class="item-title">MY STARBUCKS REWARD</div>
+            </li>
+            <li class="item">
+              <div class="item-title">WHAT'S NEW</div>
+              <div class="item-contents">
+                <div class="contents-menu">
+                  <ul class="menu-inner">
+                    <!-- <li>
+                      <ul>
+                        <h4><b>프로모션 & 이벤트</b></h4>
+                        <li>전체</li>
+                        <li>스타벅스 카드</li>
+                        <li>마이 스타벅스 리워드</li>
+                        <li>온라인</li>
+                        <li>스타벅스 플래너</li>
+                      </ul>
+                    </li> -->
+                    <!-- <li>
+                      <ul>
+                        <h4>프로모션 & 이벤트</h4>
+                        <li>전체</li>
+                        <li>스타벅스 카드</li>
+                        <li>마이 스타벅스 리워드</li>
+                        <li>온라인</li>
+                        <li>스타벅스 플래너</li>
+                      </ul>
+                    </li>
+                    <li>
+                      <ul>
+                        <h4>프로모션 & 이벤트</h4>
+                        <li>전체</li>
+                        <li>스타벅스 카드</li>
+                        <li>마이 스타벅스 리워드</li>
+                        <li>온라인</li>
+                        <li>스타벅스 플래너</li>
+                      </ul>
+                    </li> -->
+                  </ul>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
