--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
               <div class="contents__texture">
                 <div class="inner">
                   <h4 class="new">스타벅스 티바나</h4>
-                  <p>다양한 찻잎과 향신료 등 개성있는 재료로 새로운 맛과 향의 티를 선보입니다.</p>
+                  <p>
+                    다양한 찻잎과 향신료 등 개성있는 재료로 새로운 맛과 향의
+                    티를 선보입니다.
+                  </p>
                 </div>
               </div>
             </div>
@@ -296,7 +299,9 @@
               <div class="contents__texture">
                 <div class="inner">
                   <h4>스타벅스 카드 등록하기</h4>
-                  <p>카드 등록 후 리워드 서비스를 누리고 사용내역도 조회해보세요.</p>
+                  <p>
+                    카드 등록 후 리워드 서비스를 누리고 사용내역도 조회해보세요.
+                  </p>
                 </div>
               </div>
             </div>
@@ -346,6 +351,14 @@
             </div>
           </li>
         </ul>
+      </div>
+      <div class="badges">
+        <div class="badge">
+          <img src="images/badge1.jpg" alt="badge" />
+        </div>
+        <div class="badge">
+          <img src="images/badge2.jpg" alt="badge" />
+        </div>
       </div>
     </header>
   </body>
