💄 style: set position for "visual"

--- a/index.html
+++ b/index.html
@@ -375,5 +375,30 @@
         </div>
       </div>
     </header>
+
+    <section class="visual">
+      <div class="inner">
+        <!--inner 추가-->
+        <div class="title">
+          <img src="images/visual_title.png" alt="start to the year" />
+          <a href="javascript:void(0)" class="btn">자세히 보기</a>
+        </div>
+        <img src="images/visual_cup1.png" alt="cup1" class="cup1 image" />
+        <img
+          src="images/visual_cup1_text.png"
+          alt="cup1 text"
+          class="cup1 text"
+        />
+
+        <img src="images/visual_cup2.png" alt="cup2" class="cup2 image" />
+        <img
+          src="images/visual_cup2_text.png"
+          alt="cup2 text"
+          class="cup2 text"
+        />
+
+        <img src="images/visual_spoon.png" alt="spoon" class="spoon image" />
+      </div>
+    </section>
   </body>
 </html>
