--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <!-- swiper -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css"
+    />
+    <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
     <script defer src="js/main.js"></script>
   </head>
   <body>
@@ -379,26 +385,287 @@
     <section class="visual">
       <div class="inner">
         <!--inner 추가-->
-        <div class="title">
+        <div class="title fade-in">
           <img src="images/visual_title.png" alt="start to the year" />
           <a href="javascript:void(0)" class="btn">자세히 보기</a>
         </div>
-        <img src="images/visual_cup1.png" alt="cup1" class="cup1 image" />
-        <img
-          src="images/visual_cup1_text.png"
-          alt="cup1 text"
-          class="cup1 text"
-        />
 
-        <img src="images/visual_cup2.png" alt="cup2" class="cup2 image" />
-        <img
-          src="images/visual_cup2_text.png"
-          alt="cup2 text"
-          class="cup2 text"
-        />
+        <div class="fade-in">
+          <img src="images/visual_cup1.png" alt="cup1" class="cup1 image" />
+          <img
+            src="images/visual_cup1_text.png"
+            alt="cup1 text"
+            class="cup1 text"
+          />
+        </div>
 
-        <img src="images/visual_spoon.png" alt="spoon" class="spoon image" />
+        <div class="fade-in">
+          <img src="images/visual_cup2.png" alt="cup2" class="cup2 image" />
+          <img
+            src="images/visual_cup2_text.png"
+            alt="cup2 text"
+            class="cup2 text"
+          />
+        </div>
+
+        <div class="fade-in">
+          <img src="images/visual_spoon.png" alt="spoon" class="spoon image" />
+        </div>
       </div>
     </section>
+
+    <section class="notice">
+      <div class="notice-line">
+        <div class="bg-left"></div>
+        <div class="bg-right"></div>
+        <div class="inner">
+          <div class="inner__left">
+            <h2>공지사항</h2>
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <a href="javascript:void(0)">
+                    크리스마스 & 연말연시 스타벅스 매장 영업시간 변경
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="javascript:void(0)">
+                    [당첨자 발표] 2022 스타벅스 플래너 영수증 이벤트
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="javascript:void(0)">
+                    스타벅스커피 코리아 애플리케이션 버전 업데이트
+                  </a>
+                </div>
+              </div>
+            </div>
+            <a href="javascript:void(0)" class="notice-line__more">
+              <div class="material-icons">add_circle</div>
+            </a>
+          </div>
+          <div class="inner__right">
+            <h2>스타벅스 프로모션</h2>
+            <div class="toggle-promotion">
+              <div class="material-icons">upload</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 확대해도 이미지 정 가운데에 오게끔! -->
+      <div class="promotion">
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="images/promotion_slide1.jpg" alt="2021년 뉴이어~" />
+              <a href="javascript:void(0)" class="btn">자세히 보기</a>
+            </div>
+            <div class="swiper-slide">
+              <img src="images/promotion_slide2.jpg" alt="아메리카노e-쿠폰" />
+              <a href="javascript:void(0)" class="btn">자세히 보기</a>
+            </div>
+            <div class="swiper-slide">
+              <img src="images/promotion_slide3.jpg" alt="3번" />
+              <a href="javascript:void(0)" class="btn">자세히 보기</a>
+            </div>
+            <div class="swiper-slide">
+              <img src="images/promotion_slide4.jpg" alt="4번" />
+              <a href="javascript:void(0)" class="btn">자세히 보기</a>
+            </div>
+            <div class="swiper-slide">
+              <img src="images/promotion_slide5.jpg" alt="5번" />
+              <a href="javascript:void(0)" class="btn">자세히 보기</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+        <div class="swiper-prev">
+          <div class="material-icons">arrow_back</div>
+        </div>
+        <div class="swiper-next">
+          <div class="material-icons">arrow_forward</div>
+        </div>
+      </div>
+
+      <div class="rewards">
+        <div class="rewards-left"></div>
+        <div class="rewards-right"></div>
+        <div class="inner">
+          <div class="btn-group">
+            <div class="btn sign-up">회원가입</div>
+            <div class="btn sign-in">로그인</div>
+            <div class="btn gift">e-Gift 선물하기</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- .유튜브 -->
+      <div class="youtube"></div>
+
+      <div class="season-product">
+        <div class="inner">
+          <!-- <img src="images/floating3.png" alt="" /> -->
+          <img
+            src="images/season_product_image.png"
+            alt="아이스커피블렌드"
+            class="product"
+          />
+          <div class="text-group">
+            <img src="images/season_product_text1.png" alt="" class="title" />
+            <img
+              src="images/season_product_text2.png"
+              alt=""
+              class="description"
+            />
+            <div class="btn">자세히 보기</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="reserve-coffee">
+        <div class="inner">
+          <img
+            src="images/reserve_logo.png"
+            alt="reserve-logo"
+            class="reserve-logo"
+          />
+          <div class="text-group">
+            <img
+              src="images/reserve_text.png"
+              alt="description"
+              class="description"
+            />
+            <div class="btn">자세히 보기</div>
+          </div>
+
+          <img src="images/reserve_image.png" alt="" class="product" />
+        </div>
+      </div>
+
+      <div class="pick-your-favorite">
+        <div class="inner">
+          <div class="text-group">
+            <img src="images/favorite_text1.png" alt="" class="title" />
+            <img src="images/favorite_text2.png" alt="" class="description" />
+            <div class="btn">자세히 보기</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="reserve-store">
+        <div class="inner">
+          <div class="medal">
+            <div class="front">
+              <img src="images/reserve_store_medal_front.png" alt="" />
+            </div>
+            <div class="back">
+              <img src="images/reserve_store_medal_back.png" alt="" />
+              <div class="btn">매장안내</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="find-store">
+        <div class="inner">
+          <img src="images/find_store_texture1.png" alt="1" class="texture1" />
+          <img src="images/find_store_texture2.png" alt="2" class="texture2" />
+          <img src="images/find_store_picture1.jpg" alt="1" class="picture1" />
+          <img src="images/find_store_picture2.jpg" alt="2" class="picture2" />
+          <div class="text-group">
+            <img src="images/find_store_text1.png" alt="title" class="title" />
+            <img
+              src="images/find_store_text2.png"
+              alt="description"
+              class="description"
+            />
+            <div class="btn">매장찾기</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="awards">
+        <div class="inner">
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="images/awards_slide1.jpg" alt="대통령 표창" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/awards_slide2.jpg" alt="3년 연속" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/awards_slide3.jpg" alt="우수사업주 인증" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/awards_slide4.jpg" alt="경연대회 대상" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/awards_slide5.jpg" alt="대한상의회장상" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/awards_slide6.jpg" alt="기업사회공헌" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/awards_slide7.jpg" alt="KSI 1위" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/awards_slide8.jpg" alt="ks-sq 1위" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/awards_slide9.jpg" alt="커피전문점 부문" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/awards_slide10.jpg" alt="동반성장부문" />
+              </div>
+            </div>
+          </div>
+          <div class="swiper-prev">
+            <div class="material-icons">arrow_back</div>
+          </div>
+          <div class="swiper-next">
+            <div class="material-icons">arrow_forward</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="inner">
+        <ul class="menu">
+          <li>
+            <a href="javascript:void(0)" class="green"> 개인정보처리방침 </a>
+          </li>
+          <li>
+            <a href="javascript:void(0)">영상정보처리기기 운영관리 방침</a>
+          </li>
+          <li><a href="javascript:void(0)">홈페이지 이용약관</a></li>
+          <li><a href="javascript:void(0)">위치정보 이용약관</a></li>
+          <li><a href="javascript:void(0)">스타벅스 카드 이용약관</a></li>
+          <li><a href="javascript:void(0)">윤리경영 핫라인</a></li>
+        </ul>
+        <div class="btn-group">
+          <div class="btn">찾아오시는 길</div>
+          <div class="btn">신규입점제의</div>
+          <div class="btn">사이트 맵</div>
+        </div>
+        <ul class="info">
+          <!-- 왜 스팬썼지? -->
+          <li>사업자등록번호 201-81-21515</li>
+          <li>(주)스타벅스 코리아 대표이사 이석구</li>
+          <li>TEL : 02) 3015-1100 / FAX : 02) 3015-1106</li>
+          <li>개인정보 책임자 : 강기원</li>
+        </ul>
+        <p>© 2023 Starbucks Coffee Company. All Rights Reserved.</p>
+        <img
+          src="images/starbucks_logo_only_text.png"
+          alt="글자로 된 로고"
+          class="text-logo"
+        />
+      </div>
+    </footer>
+    <div class="to-top">
+      <div class="material-icons">arrow_upward</div>
+    </div>
   </body>
 </html>
