--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css"
     />
     <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
+    <script defer src="js/youtube.js"></script>
     <script defer src="js/main.js"></script>
   </head>
   <body>
@@ -499,9 +500,32 @@
         </div>
       </div>
 
-      <!-- .유튜브 -->
-      <div class="youtube"></div>
+      <!-- YOUTUBE VIDEO -->
+      <div class="youtube">
+        <div class="youtube__area">
+          <div id="player"></div>
+        </div>
+        <div class="youtube__cover"></div>
+        <div class="inner">
+          <img
+            src="images/floating1.png"
+            alt="floating1"
+            class="floating floating1"
+          />
+          <img
+            src="images/floating2.png"
+            alt="floating2"
+            class="floating floating2"
+          />
+          <img
+            src="images/floating3.png"
+            alt="floating3"
+            class="floating floating3"
+          />
+        </div>
+      </div>
 
+      <!-- SEASON PRODUCT -->
       <div class="season-product">
         <div class="inner">
           <!-- <img src="images/floating3.png" alt="" /> -->
