--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
     />
     <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
     <script defer src="js/youtube.js"></script>
+    <!-- SCROLLMAGIC -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"
+      integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script defer src="js/main.js"></script>
   </head>
   <body>
@@ -521,7 +528,7 @@
       </div>
 
       <!-- SEASON PRODUCT -->
-      <div class="season-product">
+      <div class="season-product scroll-spy">
         <div class="inner">
           <img
             src="images/floating3.png"
@@ -531,46 +538,69 @@
           <img
             src="images/season_product_image.png"
             alt="아이스커피블렌드"
-            class="product"
+            class="product back-to-position to-right delay-0"
           />
           <div class="text-group">
-            <img src="images/season_product_text1.png" alt="" class="title" />
+            <img
+              src="images/season_product_text1.png"
+              alt=""
+              class="title back-to-position to-left delay-1"
+            />
             <img
               src="images/season_product_text2.png"
               alt=""
-              class="description"
+              class="description back-to-position to-left delay-2"
             />
-            <div class="btn">자세히 보기</div>
+            <!-- btn과 애니메이션 충돌 피하기 위해 div로 한 번더 감쌈 -->
+            <div class="back-to-position to-left delay-3">
+              <div class="btn">자세히 보기</div>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="reserve-coffee">
+      <div class="reserve-coffee scroll-spy">
         <div class="inner">
           <img
             src="images/reserve_logo.png"
             alt="reserve-logo"
-            class="reserve-logo"
+            class="reserve-logo back-to-position to-right delay-0"
           />
           <div class="text-group">
             <img
               src="images/reserve_text.png"
               alt="description"
-              class="description"
+              class="description back-to-position to-right delay-1"
             />
-            <div class="btn">자세히 보기</div>
+            <div class="back-to-position to-right delay-2">
+              <div class="btn">자세히 보기</div>
+            </div>
           </div>
 
-          <img src="images/reserve_image.png" alt="" class="product" />
+          <img
+            src="images/reserve_image.png"
+            alt=""
+            class="product back-to-position to-left delay-3"
+          />
         </div>
       </div>
 
-      <div class="pick-your-favorite">
+      <div class="pick-your-favorite scroll-spy">
         <div class="inner">
           <div class="text-group">
-            <img src="images/favorite_text1.png" alt="" class="title" />
-            <img src="images/favorite_text2.png" alt="" class="description" />
-            <div class="btn">자세히 보기</div>
+            <img
+              src="images/favorite_text1.png"
+              alt=""
+              class="title back-to-position to-right delay-0"
+            />
+            <img
+              src="images/favorite_text2.png"
+              alt=""
+              class="description back-to-position to-right delay-1"
+            />
+            <div class="back-to-position to-right delay-2">
+              <div class="btn">자세히 보기</div>
+            </div>
           </div>
         </div>
       </div>
@@ -589,20 +619,34 @@
         </div>
       </div>
 
-      <div class="find-store">
+      <div class="find-store scroll-spy">
         <div class="inner">
           <img src="images/find_store_texture1.png" alt="1" class="texture1" />
           <img src="images/find_store_texture2.png" alt="2" class="texture2" />
-          <img src="images/find_store_picture1.jpg" alt="1" class="picture1" />
-          <img src="images/find_store_picture2.jpg" alt="2" class="picture2" />
+          <img
+            src="images/find_store_picture1.jpg"
+            alt="1"
+            class="picture1 back-to-position to-right delay-0"
+          />
+          <img
+            src="images/find_store_picture2.jpg"
+            alt="2"
+            class="picture2 back-to-position to-right delay-1"
+          />
           <div class="text-group">
-            <img src="images/find_store_text1.png" alt="title" class="title" />
+            <img
+              src="images/find_store_text1.png"
+              alt="title"
+              class="title back-to-position to-left delay-0"
+            />
             <img
               src="images/find_store_text2.png"
               alt="description"
-              class="description"
+              class="description back-to-position to-left delay-1"
             />
-            <div class="btn">매장찾기</div>
+            <div class="back-to-position to-left delay-2">
+              <div class="btn">매장찾기</div>
+            </div>
           </div>
         </div>
       </div>
@@ -679,7 +723,10 @@
           <li>TEL : 02) 3015-1100 / FAX : 02) 3015-1106</li>
           <li>개인정보 책임자 : 강기원</li>
         </ul>
-        <p>© 2023 Starbucks Coffee Company. All Rights Reserved.</p>
+        <p>
+          &copy; <span class="this-year"></span> Starbucks Coffee Company. All
+          Rights Reserved.
+        </p>
         <img
           src="images/starbucks_logo_only_text.png"
           alt="글자로 된 로고"
@@ -687,7 +734,7 @@
         />
       </div>
     </footer>
-    <div class="to-top">
+    <div id="to-top">
       <div class="material-icons">arrow_upward</div>
     </div>
   </body>
