--- a/index.html
+++ b/index.html
@@ -4,44 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>STARBUCKS</title>
-    <!-- <meta property="og:type" content="website" />
+
+    <meta property="og:type" content="website" />
     <meta property="og:site_name" content="STARBUCKS" />
     <meta property="og:title" content="STARBUCKS COFFEE KOREA" />
     <meta property="og:description" content="스타벅스 클론코딩 오픈그래프" />
     <meta property="og:image" content="images/starbucks_seo.jpg" />
-    <meta property="og:url" content="https://starbucks.co.kr" /> -->
+    <meta property="og:url" content="https://starbucks.co.kr" />
+
     <link rel="icon" href="favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
-    <!-- CSS에 font-family 추가하기 -->
+    <!-- FONT 추가 -->
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <!-- MATERIAL ICONS -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- lodash -->
+    <!-- LODASH -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
       integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <!-- gsap -->
+    <!-- GSAP -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
       integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <!-- swiper -->
+    <!-- SWIPER -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css"
@@ -58,7 +61,6 @@
     <script defer src="js/main.js"></script>
   </head>
   <body>
-    <!-- <div class="material-icons">search</div> -->
     <header>
       <div class="inner">
         <a href="/" class="logo">
@@ -460,7 +462,8 @@
           </div>
         </div>
       </div>
-      <!-- 확대해도 이미지 정 가운데에 오게끔! -->
+      <!-- POINT: 확대해도 이미지 정 가운데에 오게끔! -->
+      <!-- PROMOTION -->
       <div class="promotion">
         <div class="swiper-container">
           <div class="swiper-wrapper">
@@ -495,6 +498,7 @@
         </div>
       </div>
 
+      <!-- REWARDS -->
       <div class="rewards">
         <div class="rewards-left"></div>
         <div class="rewards-right"></div>
@@ -559,6 +563,7 @@
         </div>
       </div>
 
+      <!-- RESERVE COFFEE -->
       <div class="reserve-coffee scroll-spy">
         <div class="inner">
           <img
@@ -585,6 +590,7 @@
         </div>
       </div>
 
+      <!-- PICK YOUR FAVORITE -->
       <div class="pick-your-favorite scroll-spy">
         <div class="inner">
           <div class="text-group">
@@ -605,6 +611,7 @@
         </div>
       </div>
 
+      <!-- RESERVE STORE -->
       <div class="reserve-store">
         <div class="inner">
           <div class="medal">
@@ -619,6 +626,7 @@
         </div>
       </div>
 
+      <!-- FIND STORE -->
       <div class="find-store scroll-spy">
         <div class="inner">
           <img src="images/find_store_texture1.png" alt="1" class="texture1" />
@@ -651,6 +659,7 @@
         </div>
       </div>
 
+      <!-- AWARDS -->
       <div class="awards">
         <div class="inner">
           <div class="swiper-container">
